cluster/values/apps/n8n/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: apps
spec:
  hostnames:
  - n8n.raymol.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal-eg
    namespace: gateway-envoy
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: n8n-main
      namespace: apps
      port: 5678
    matches:
    - path:
        type: PathPrefix
        value: /
